# flask-sample

./: README.md  pyproject.toml
src/flask_sample/: app.py
tests/: test_flask_sample.py
