[tool.poetry]
name = "flask-sample"
version = "0.1.0"
description = ""
authors = ["t_ishikawa <tissi0708@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.7"
Flask = "^1.1.1"

[tool.poetry.dev-dependencies]
pytest = "^5.2"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
